@@ -1,3 +1,10 @@
+2016-03-11 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/z80/gen.c
+	  Fix a bug in genRet(): long long return value is cut to long.
+	* support/regression/tests/bug-2477.c
+	  Add a new test case.
+
 2016-03-10 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/stm8/gen.c
